[package]
name = "webdav_fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4.23"
fuser = "0.12.0"
roxmltree = "0.17.0"
rustydav = { path = "../rustydav/" }
